2008-01-03  David Bateman  <dbateman@free.fr>

	* MSparse.cc (SPARSE_A2A2_OP): If first arg is scalar zero, then
	need unary operator on remaining argument
	* Sparse-op-defs.h (SPARSE_SMSM_BIN_OP_1): ditto.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-12-18  David Bateman  <dbateman@free.fr>

	* Sparse.cc (template <class T> Sparse<T> Sparse<T>::index 
	(idx_vector&, int) const): Fix case indexing of non zero scalar 
	stored as a sparse matrix.
	(template <class T> Sparse<T> Sparse<T>::index (idx_vector&, 
	idx_vector&, int) const): For the non permutated indexing case,
	fix link list calculation and use.

2007-12-17  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::indexN): Correctly handle scalar indexed by
	N-d array.

2007-12-17  David Bateman  <dbateman@free.fr>

	* Sparse-op-defs.h (SPARSE_ANY_ALL_OP_ROW_CODE): Use ridx for row
	index.

2007-12-11  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::index (idx_vector&, int) const):
	If indexing scalar with empty matrix, return empty array with same
	size as index.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* NLEqn.h (NLEqn::fval): New data member.  Adjust constructors
	and assignment operator.
	(NLEqn::function_value): New function.
	* NLEqn.cc (NLEqn::solve): If solution is successful, compute
	function value.

	* file-ops.cc (file_ops::concat): New function.
	* file-ops.h: Provide decl.

2007-12-07  John W. Eaton  <jwe@octave.org>

	* oct-time.cc (octave_base_tm::init): Only assign t->tm_zone if it
	is not 0.

2007-12-07  David Bateman  <dbateman@free.fr>

	* Sparse-op-defs.h (SPARSE_SMS_CMP_OP, SPARSE_SMS_BOOL_OP,
	SPARSE_SSM_CMP_OP, SPARSE_SSM_BOOL_OP, SPARSE_SMSM_CMP_OP, 
	SPARSE_SMSM_BOOL_OP, SPARSE_BASE_REDUCTION_OP): Use sparse
	indexing where possible rather than the elem method.
	(SPARSE_REDUCTION_OP_ROW_EXPR, SPARSE_REDUCTION_OP_COL_EXPR,
	SPARSE_ANY_ALL_OP_ROW_CODE, SPARSE_ANY_ALL_OP_COL_CODE):
	Replace for new version of SPARSE_BASE_REDUCTION_OP.