@@ -1,3 +1,8 @@
+2008-01-07  David Bateman  <dbateman@free.fr>
+
+	* Sparse-op-defs.h (SPARSE_ANY_ALL_OP_ROW_CODE): Don't break from
+	loop if this test succeeds.
+
 2008-01-03  David Bateman  <dbateman@free.fr>
 
 	* MSparse.cc (SPARSE_A2A2_OP): If first arg is scalar zero, then
